# microhaskell

./: .gitignore  README.md  nn-training.cabal
src/: ActivationFunctions.hs  AutoDiff.hs  Backprop.hs  ForwardProp.hs  Initialization.hs  LinearAlgebra.hs  LossFunctions.hs  Main.hs  NeuralNet.hs  Training.hs  Types.hs
