cabal-version:      3.0

name:               nn-training

version:            0.1.0.0

license:            BSD-2-Clause

author:             milton

build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable src
    import:           warnings

    main-is:          Main.hs

    other-modules:
      ActivationFunctions
      AutoDiff
      Backprop
      ForwardProp
      Initialization
      LossFunctions
      LinearAlgebra
      NeuralNet
      Types
      Training

    build-depends: base >= 4.7 && < 5, random, mtl, text

    hs-source-dirs:   src

    default-language: Haskell2010

library
  exposed-modules:     
      NeuralNet
  other-modules:
      ActivationFunctions
      AutoDiff
      Backprop
      ForwardProp
      Initialization
      LossFunctions
      LinearAlgebra
      Types
      Training
  hs-source-dirs:      src
  build-depends: base >= 4.7 && < 5, random, mtl, text

  default-language:    Haskell2010
